--- a/BankServices/Views/Shared/_Layout.cshtml
+++ b/BankServices/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AccountHolder" asp-action="Index">Account holder</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Accounts</a>
+                        </li>
                     </ul>
                 </div>
             </div>
