--- a/BankServices/Views/Account/Index.cshtml
+++ b/BankServices/Views/Account/Index.cshtml
@@ -1,60 +1,69 @@
 ﻿@model IEnumerable<AccountDTO>
 
 <div class="card shadow border-0 mt-4">
-	<div class="card-header bg-secondary bg-gradient ml-0 py-3">
-		<div class="row">
-			<div class="col-12 text-center">
-				<h1 class="text-white">Coupons List</h1>
-			</div>
-		</div>
-	</div>
-	<div class="card-body p-4">
-		<div class="row pb-3">
-			<div class="col-6">
-			</div>
-			@* <div class="col-6 text-end">
-			<a asp-action="CouponCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h1 class="text-white">Accounts List</h1>
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+        <div class="row pb-3">
+            <div class="col-6">
+            </div>
+            <div class="col-6 text-end">
+                <a asp-action="Create" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Account</a>
 
-			</div> *@
-		</div>
-		<table class="table">
-			<thead>
-				<tr>
-					<th>
-						Coupon Code
-					</th>
-					<th>
-						Discount Amount
-					</th>
-					<th>
-						Minimum Amount
-					</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				@foreach (var item in Model)
-				{
-					<tr>
-						<td>
-							@item.AccountType
-						</td>
-						<td>
-							@((item.AccountHolderId))
-						</td>
-						<td>
-							@((item.Id))
-						</td>
-						<td>
-							<a asp-action="CouponDelete" asp-route-couponId="@item.Id" class="btn btn-danger">
-								<i class="bi bi-trash"></i>
-							</a>
-						</td>
-					</tr>
-				}
-			</tbody>
-		</table>
+            </div>
+        </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        Account ID
+                    </th>
+                    <th>
+                        Account Type
+                    </th>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Status
+                    </th>
+                    <th>
+                        Available Balance
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.Id
+                        </td>
+                        <td>
+                            @item.AccountType
+                        </td>
+                        <td>
+                            @item.Name
+                        </td>
+                        <td>
+                            @item.Status
+                        </td>
+                        <td>
+                            @((item.AvailableBalance).ToString("c"))
+                        </td>
+                        <td>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-	</div>
+    </div>
 
 </div>
