--- a/BankServices/Views/Transaction/Create.cshtml
+++ b/BankServices/Views/Transaction/Create.cshtml
@@ -3,21 +3,23 @@
 <form asp-action="Create">
     <br />
     <div class="container border p-3">
-        <h1 class="text-white text-center">Withdraw</h1>
+        <h1 class="text-center">Withdrawal</h1>
 
-        <hr />
+        
         <div class="row">
-           
+            <div class="col-2">
+                <label class="control-label pt-2" style="font-size:20px;">Amount</label>
+            </div>
             
             <div class="col-10 pb-3">
-                <input asp-for="Amount" type="number" class="form-control" /> <span asp-validation-for="Amount" class="text-danger"></span>
+                <input asp-for="Amount" type="number" class="form-control" placeholder="Enter amount to withdraw" /> <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
 
             <div class="col-5 offset-2">
-                <a asp-action="Index" class="btn-primary btn form-control ">Back to List</a>
+                <a asp-action="Index" asp-controller="Account" class="btn-primary btn form-control ">Cancel</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Create" class="btn btn-success form-control" />
+                <input type="submit" value="Withdraw" class="btn btn-success form-control" />
             </div>
         </div>
 
